src/react/components/LanguageScroller/LanguageScroller.css
.wrapper {
	height: 100vh;
	position: fixed;
	top: 0;
	right: 24vw;
	z-index: 2;
}
	.container {
		display: block;
		height: calc(100% + (2 * var(--language-size)));
		width: var(--language-size);
		flex: 0 0 var(--language-size);
		position: relative;
		top: calc(var(--language-size) * -1);
		overflow-x: hidden;
		transform-origin: 100% 50%;
		--scrollbar_width: 18px;
	}
		.container::before, .container::after {
			content: "";
			display: block;
			height: 0;
			width: 0;
			border-left: 0.62em solid transparent;
			border-right: 0.62em solid transparent;
			position: absolute;
			right: 9.5%;
			z-index: 2;
			pointer-events: none;
			animation: bounce 1s infinite;
		}
		.container.topArrow::before {
			top: 21em;
			border-bottom: 1em solid var(--accent-color);
		}
		.container.bottomArrow::after {
			bottom: 19em;
			border-top: 1em solid var(--accent-color);
		}
		.list {
			height: 100%;
			width: calc(100% + var(--scrollbar_width));
			padding-top: calc(var(--language-size) * 1.125);
			overflow-y: scroll;
			overflow-x: hidden;
			list-style-type: none;
		}
			.language {
				position: relative;
				text-align: right;
			}
			.language:last-child {
				margin-bottom: calc(var(--language-size) * 1.125);
			}
				.language + .language {
					margin-top: 1em;
				}
				.logo {
					width: 40%;
					transform: scale(0.925);
					transition: transform .3s;
				}
				.language:hover .logo {
					transform: scale(1);
				}

				.popout {
					position: absolute;
					top: 50%;
					right: 0;
					transform: translate(0%,-50%);
					opacity: 0;
					pointer-events: none;
					transition: transform .3s, opacity .2s;
				}
				.language:hover .popout {
					transform: translate(-50%,0%);	
					opacity: 1;
				}
					.popout .link {
						display: inline-block;
						transform: rotate(-22.5deg);
					}
						/*little animation fiddly things*/
						.popout .link::before,
						.popout .link::after {
							content: "";
							display: block;
							height: 100%;
							position: absolute;
							top: 0;
							left: 0;
							background-color: var(--accent-color);
							transform: translateX(0);
							transition-property: transform;
							transition-duration: .3s;
							transition-timing-function: var(--ease-out-back)
						}
						.popout .link::before {
							width: 0.62em;
							transition-delay: .2s
						}
						.popout .link::after {
							width: 0.388em;
							transition-delay: .3s;
						}
						.language:hover .popout .link::before {
							transform: translateX(-1em);
						}
						.language:hover .popout .link::after {
							transform: translateX(-1.7em)
						}

						.popout .label {
							display: inline-block;
							padding: 0.62em 1.62em 0.62em 1em;
							position: relative;	
							font-size: var(--subheading-size);
							color: var(--base-color);
							background-color: var(--accent-color);
							pointer-events: all;
							clip-path: polygon(0% 0%, 90% 0%, 90% 25%, 100% 50%, 90% 75%, 90% 100%, 0% 100%);
						}
						
						.popout .label:hover {
							text-decoration: none;
						}
@supports not (clip-path: polygon(0% 0%, 0% 100%, 50% 100%)){
	.wrapper {
		right: 35vw;
	}
	.container {
		transform: none !important;
	}
}

/* TOUCHSCREEN-ONLY DEVICES
-------------------------------------*/
@media (hover: none) and (pointer: coarse) {
	.container {
		--scrollbar_width: 0px;
	}
}

/* RESPONSIVE JAZZ
------------------------------------*/
@media(max-width: 1025px){
	.container.topArrow::before {
		top: 28em;
	}
}
@media(max-width: 900px){
	.wrapper {
		width: 100%;
		height: auto;
		padding: 1.62em var(--side-padding);
		position: relative;
		right: 0;
		order: 4;
	}
		.container {
			width: 100%;
			height: 10em;
			top: 0;
			/*overflow-x: hidden;*/
			overflow-y: hidden;
		}
			.list {
				display: flex;
				flex-wrap: nowrap;
				width: 100%;
				height: calc(100% );
				padding: 0 0 1.62em;
				flex-direction: row;
				overflow-y: hidden;
				overflow-x: scroll;
			}
				.language {
					text-align: center;
				}
				.language + .language {
					margin-top: 0;
					margin-left: 4.25vw;
				}
					.popout {
						display: none;
					}
					.logo {
						width: auto;
						height: 100%;
					}
}

/* ANIMATIONS
-------------------------------------*/
@keyframes bounce {
	0%, 100% {
		transform: translate(-50%, 0);
	}
	50% {
		transform: translate(-50%, -1em);	
	}
}

